--- a/Frontend/jewellaryfrontend/src/App.css
+++ b/Frontend/jewellaryfrontend/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
 }
-
+.main-content {
+  flex: 1;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
