--- a/Frontend/jewellaryfrontend/src/pages/Dashboard.css
+++ b/Frontend/jewellaryfrontend/src/pages/Dashboard.css
@@ -280,13 +280,15 @@
       align-items: flex-start;
       text-align: center;
     }
-  
+
+   
     .activity-image,
     .purchase-item img,
     .listing-item img,
     .saved-item img {
       width: 100%;
       height: 200px;
+      object-fit: contain;
     }
   }
   
