--- a/Frontend/jewellaryfrontend/src/pages/Dashboard.css
+++ b/Frontend/jewellaryfrontend/src/pages/Dashboard.css
@@ -76,13 +76,14 @@
   }
   
   .nav-item:hover {
-    background-color: #f5f5f5;
+    background-color: #c0bfbf;
   }
   
   .nav-item.active {
     background-color: var(--primary-color);
-    color: white;
+    color: rgb(54, 28, 204);
   }
+  
   
   /* Main Content Styles */
   .dashboard-main {
@@ -250,6 +251,22 @@
     margin-top: 30px;
   }
   
+  
+.remove{
+  background-color: #D32F2F; /* Red */
+  color: white;
+  padding: 10px 15px;
+  margin-left: 5px;
+  text-decoration: none;
+  border-radius: 5px;
+  display: inline-block;
+  font-weight: bold;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.remove:hover {
+  background-color: #E53935; /* Lighter Red */
+}
   /* Responsive */
   @media (max-width: 992px) {
     .dashboard-content {
